# rust-htmx-play

./: README.md
shop/: Cargo.toml
shop/src/: main.rs  my_logger.rs  route_static.rs  serve_dir.rs  timer.rs
shop/src/web/: index.rs  main.rs  mod.rs  route_static.rs  webserver.rs
shop/static/: clicked.html  hello2.html  index.html  not_found.html  test.tpl
shop/static/static/: hello2.html
