[package]
name = "shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
diesel = { version = "2.1.1", features = ["sqlite"] }
http = "0.2.9"
hyper = "0.14.27"
include_dir = "0.7.3"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
mime_guess = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
